--- a/src/ICom.Web/Web.config
+++ b/src/ICom.Web/Web.config
@@ -20,7 +20,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <pages>
+    <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
@@ -29,6 +29,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="ICom.Web.Infrastructure" />
       </namespaces>
     </pages>
   </system.web>
