--- a/src/ICom.Web/packages.config
+++ b/src/ICom.Web/packages.config
@@ -32,6 +32,8 @@
   <package id="MySql.Data" version="6.5.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
+  <package id="NHibernateProfiler" version="1.0.0.953" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
