--- a/src/ICom.Core/ICom.Core.csproj
+++ b/src/ICom.Core/ICom.Core.csproj
@@ -50,7 +50,8 @@
   <ItemGroup>
     <Compile Include="AuthSecurity\Encrypter.cs" />
     <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\UserEntity\User.cs" />
+    <Compile Include="Entities\UserEntity\UserType.cs" />
     <Compile Include="Nhibernate\Maps\UserMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UserService.cs" />
