--- a/src/ICom.Core/ICom.Core.csproj
+++ b/src/ICom.Core/ICom.Core.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\UserEntity\User.cs" />
     <Compile Include="Entities\UserEntity\UserType.cs" />
+    <Compile Include="Extensions\Collections\UserCollectionExtensions.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Nhibernate\Maps\UserMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UserService.cs" />
@@ -59,6 +61,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
